[package]
name = "salvo-rustls"
version = "0.0.4"
edition = "2021"
rust-version = "1.65"
license = "Apache-2.0 OR ISC OR MIT"
readme = "README.md"
description = "Rustls+hyper integration for pure rust HTTPS"
homepage = "https://github.com/salvo-rs/salvo-rustls"
repository = "https://github.com/salvo-rs/salvo-rustls"
documentation = "https://docs.rs/salvo-rustls/"

[dependencies]
http = "0.2"
http-body-util = "0.1.0-rc.3"
hyper = { version = "=1.0.0-rc.4", default-features = false, features = ["client", "server"] }
salvo-utils = { version = "0.0.4", features = ["runtime", "http1", "http2", "tcp", "client"] }
log = { version = "0.4.4", optional = true }
rustls-native-certs = { version = "0.6", optional = true }
rustls = { version = "0.21.0", default-features = false }
tokio = "1.0"
tokio-rustls = { version = "0.24.0", default-features = false }
webpki-roots = { version = "0.24", optional = true }
futures-util = { version = "0.3" }

[dev-dependencies]
futures-util = { version = "0.3.1", default-features = false }
hyper = { version = "=1.0.0-rc.4", default-features = false, features = ["client", "server"] }
rustls = { version = "0.21.0", default-features = false, features = ["tls12"] }
rustls-pemfile = "1.0.0"
tokio = { version = "1.0", features = ["io-std", "macros", "net", "rt-multi-thread"] }

[features]
default = ["native-tokio", "http1", "tls12", "logging"]
http1 = ["hyper/http1"]
http2 = ["hyper/http2"]
webpki-tokio = ["tokio-runtime", "webpki-roots"]
native-tokio = ["tokio-runtime", "rustls-native-certs"]
tokio-runtime = ["salvo-utils/runtime"]
tls12 = ["tokio-rustls/tls12", "rustls/tls12"]
logging = ["log", "tokio-rustls/logging", "rustls/logging"]

[[example]]
name = "client"
path = "examples/client.rs"
required-features = ["native-tokio", "http1"]

[[example]]
name = "server"
path = "examples/server.rs"
required-features = ["tokio-runtime"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
